--- a/sources/style.css
+++ b/sources/style.css
@@ -32,18 +32,19 @@ body {
   background-image: url("/images/tools-for-motivation-KvTOwKoji7g-unsplash.jpg");
 }
 .logo {
-  width: 3%;
+  width: 10%;
 }
 
 .happycoder {
   display: block;
   margin: 0 auto;
   margin-bottom: 15px;
-  width: 25%;
+  width: 60%;
 }
 
 .button1 {
   background-color: var(--basicblue);
+  margin-top: 15px;
 }
 
 .shortdesc {
@@ -55,6 +56,7 @@ h5 {
   font-size: 66px;
   color: orangered !important;
   text-shadow: 1px 1px #558abb;
+  margin-top: 25px;
 }
 
 h4 {
