--- a/sources/style.css
+++ b/sources/style.css
@@ -60,24 +60,35 @@ h5 {
 }
 
 h4 {
+  background: rgb(220, 240, 247, 0.8);
+  border: solid var(--basicblue);
+  border-radius: 50%;
+  border-width: 3px;
+  display: block;
+  margin: 0 auto;
+
   font-family: "Exo", sans-serif;
   font-style: italic;
-  font-size: 20px;
-  color: var(--basicblue) !important;
+  font-size: 17px;
+  padding: 10px;
+  text-align: center;
   text-shadow: 1px 1px orangered;
+  width: 15%;
 }
 
-.headercard,
-.headerprojects {
+.headercard {
   background: rgb(220, 240, 247, 0.8);
   border-width: 3px;
   border-color: var(--basicblue);
   display: block;
   margin: 0 auto;
   margin-top: 20px;
+}
+
+.headercard {
+  border-radius: 100%;
   height: 500px;
   width: 500px;
-  border-radius: 100%;
   padding: 20px 100px;
 }
 
