--- a/sources/style.css
+++ b/sources/style.css
@@ -66,6 +66,7 @@ h4 {
   border-width: 3px;
   display: block;
   margin: 0 auto;
+  margin-top: 35px;
   font-family: "Exo", sans-serif;
   font-style: italic;
   font-size: 17px;
@@ -83,6 +84,10 @@ h6 {
   margin-top: 10px;
 }
 
+.logo-div {
+  color: red;
+}
+
 .headercard {
   background: rgb(220, 240, 247, 0.8);
   border-width: 3px;
@@ -90,9 +95,6 @@ h6 {
   display: block;
   margin: 0 auto;
   margin-top: 20px;
-}
-
-.headercard {
   border-radius: 100%;
   height: 500px;
   width: 500px;
@@ -106,14 +108,13 @@ h6 {
   display: block;
   margin: 0 auto;
   margin-top: 20px;
-  width: 70%;
+  width: 95%;
   border-radius: 50% 20% / 10% 40%;
 }
 
 .projectimage {
-  margin-top: 7%;
+  margin-top: 10%;
   margin-left: 2%;
-
   border-radius: 2%;
   width: 90%;
 }
@@ -127,7 +128,7 @@ h6 {
 }
 
 .link-div {
-  margin-bottom: 5px;
+  margin-bottom: 55px;
 }
 
 p {
