--- a/sources/style.css
+++ b/sources/style.css
@@ -97,6 +97,63 @@ h6 {
   padding: 20px 100px;
 }
 
+.aboutcard {
+  background: rgb(220, 240, 247, 0.8);
+  border: solid 3px;
+  border-color: var(--basicblue);
+  display: block;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-left: 300px;
+  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+  height: 500px;
+  width: 500px;
+  padding: 20px 20px;
+  padding-left: 20px;
+}
+.aboutcard p {
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.aboutcard h5 {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.aboutcard a {
+  display: block;
+  margin: 0 auto;
+  width: 200px;
+}
+
+.about_me_picture {
+  display: block;
+  margin: 0 auto;
+  margin-top: 70px;
+  width: 60%;
+}
+
+.about_picture_card {
+  background: rgb(220, 240, 247, 0.8);
+  border: solid 3px;
+  border-color: var(--basicblue);
+  display: block;
+  margin: 0 auto;
+  margin-top: 300px;
+  margin-right: 370px;
+  border-radius: 75% 25% 60% 40% / 81% 78% 22% 19%;
+  height: 300px;
+  width: 300px;
+  padding: 20px 10px;
+}
+
+.logo_about {
+  display: block;
+  margin: 0 auto;
+  width: 8%;
+}
+
 .projectcard {
   background: rgb(220, 240, 247, 0.8);
   border-width: 3px;
