--- a/sources/style.css
+++ b/sources/style.css
@@ -220,4 +220,13 @@ p {
     padding: 5px;
     width: 50%;
   }
+
+  .aboutcard {
+    margin: 10px;
+  }
+
+  .about_picture_card {
+    margin: 10px;
+    margin-left: 90px;
+  }
 }
