--- a/sources/style.css
+++ b/sources/style.css
@@ -76,6 +76,23 @@ h4 {
   width: 15%;
 }
 
+.headerprojects2 {
+  background: rgb(220, 240, 247, 0.8);
+  border: solid var(--basicblue);
+  border-radius: 50%;
+  border-width: 3px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 35px;
+  font-family: "Exo", sans-serif;
+  font-style: italic;
+  font-size: 17px;
+  padding: 15px;
+  text-align: center;
+  text-shadow: 1px 1px orangered;
+  width: 25%;
+}
+
 h6 {
   font-family: "Lovers Quarrel", cursive;
   font-size: 50px;
