--- a/sources/style.css
+++ b/sources/style.css
@@ -257,7 +257,7 @@ footer {
   background-color: rgb(220, 240, 247, 0.8);
   padding: 15px;
   border-top: solid var(--basicblue) 3px;
-  position: absolute;
+  position: relative;
   bottom: 0;
   min-width: 100%;
 }
