--- a/sources/style.css
+++ b/sources/style.css
@@ -31,6 +31,7 @@
 body {
   background-image: url("/images/tools-for-motivation-KvTOwKoji7g-unsplash.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .logo {
@@ -120,16 +121,13 @@ h6 {
   background: rgb(220, 240, 247, 0.8);
   border: solid 3px;
   border-color: var(--basicblue);
-  display: block;
-  margin: 0 auto;
   margin-top: 20px;
-  margin-left: 300px;
   border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-  height: 500px;
-  width: 500px;
-  padding: 20px 20px;
-  padding-left: 20px;
+  max-height: 480px;
+  max-width: 480px;
+  padding: 0px 40px 80px 20px;
 }
+
 .aboutcard p {
   text-align: center;
   margin-bottom: 25px;
@@ -143,7 +141,7 @@ h6 {
 .aboutcard a {
   display: block;
   margin: 0 auto;
-  width: 200px;
+  max-width: 200px;
 }
 
 .about_me_picture {
@@ -157,13 +155,12 @@ h6 {
   background: rgb(220, 240, 247, 0.8);
   border: solid 3px;
   border-color: var(--basicblue);
-  display: block;
-  margin: 0 auto;
+
   margin-top: 300px;
-  margin-right: 370px;
+
   border-radius: 75% 25% 60% 40% / 81% 78% 22% 19%;
-  height: 300px;
-  width: 300px;
+  max-height: 270px;
+  max-width: 270px;
   padding: 20px 10px;
 }
 
@@ -209,7 +206,9 @@ p {
 }
 
 .row {
-  margin-bottom: 30px;
+  margin-left: 10px;
+  margin-bottom: 80px;
+  width: 95%;
 }
 
 .email {
